# Awabancha

./: Cargo.toml  MIGRATION_TODO.md  README.md
src/: actions.rs  app.rs  lib.rs  main.rs
src/components/: button.rs  context_menu.rs  dropdown.rs  input.rs  mod.rs  modal.rs  toast.rs
src/git/: branch.rs  commit.rs  conflict.rs  diff.rs  mod.rs  remote.rs  repository.rs  stash.rs  status.rs  tag.rs
src/i18n/: mod.rs  translations.rs
src/state/: git_state.rs  mod.rs  recent_projects.rs  settings_state.rs  toast_state.rs  watcher.rs
src/views/: commit_form.rs  commit_graph.rs  conflict_dialog.rs  diff_viewer.rs  file_list.rs  left_panel.rs  main_layout.rs  mod.rs  right_panel.rs  settings.rs  welcome.rs
