[package]
name = "awabancha"
version = "0.0.1"
edition = "2021"
authors = ["Awabancha Contributors"]
description = "A fast Git GUI client built with gpui"
license = "MIT"
repository = "https://github.com/awabancha/awabancha"

[lib]
name = "awabancha"
path = "src/lib.rs"

[[bin]]
name = "awabancha"
path = "src/main.rs"

[dependencies]
gpui = { path = "../zed/crates/gpui" }
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
notify = "8.0"
notify-debouncer-mini = "0.6"
thiserror = "2.0"
anyhow = "1.0"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
unicode-segmentation = "1.12"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
